@startuml Book Store Class Diagram
!theme plain
skinparam classAttributeIconSize 0

' ============================================
' CLASS DEFINITIONS
' ============================================

class User {
  -id: int
  -username: string
  -email: string
  -password_hash: string
  +name: string
  +phone: string
  +role: string
  +is_active: boolean
  +orders: List<Order>
  +reviews: List<Review>
  +wishlists: List<Wishlist>
  +addresses: List<UserAddress>
  +carts: List<Cart>
  --
  +login(): void
  +logout(): void
  +register(): void
  +changePassword(): void
  +getUserById(): User
  +getAllUsers(): List<User>
}

class Book {
  -id: int
  +title: string
  +description: string
  +category: string
  +category_id: int
  +author: string
  +publisher: string
  +isbn: string
  +trending: boolean
  +cover_image: string
  +old_price: decimal
  +new_price: decimal
  +stock: int
  +reviews: List<Review>
  +wishlists: List<Wishlist>
  +orderItems: List<OrderItem>
  +cartItems: List<CartItem>
  +images: List<BookImage>
  --
  +getBookById(): Book
  +getBooksByCategory(category: string): List<Book>
  +getBooksByPrice(minPrice: decimal, maxPrice: decimal): List<Book>
  +getTrendingBooks(): List<Book>
  +createBook(): Book
  +updateBook(): Book
  +deleteBook(): void
}

class Review {
  -id: int
  -user_id: int
  -book_id: int
  +rating: int
  +comment: string
  +created_at: Date
  --
  +getReviewById(): Review
  +getReviewContent(): string
  +addReview(bookId: int, rating: int, comment: string): void
  +getReviewsByBook(bookId: int): List<Review>
  +getReviewsByUser(userId: int): List<Review>
}

class Cart {
  -id: int
  -user_id: int
  +status: string
  +empty: boolean
  +itemQuantity: int
  +items: List<CartItem>
  --
  +checkout(): Order
  +addItem(bookId: int, quantity: int): void
  +removeItem(bookId: int): void
  +updateItemQuantity(bookId: int, quantity: int): void
  +clearCart(): void
  +getCartTotal(): decimal
  +getCartById(): Cart
}

class CartItem {
  -id: int
  -cart_id: int
  -book_id: int
  +quantity: int
  +unit_price: decimal
  --
  +getTotalPrice(): decimal
}

class Order {
  -id: int
  -user_id: int
  -address_id: int
  +name: string
  +email: string
  +phone: string
  +city: string
  +state: string
  +country: string
  +zipcode: string
  +status: string
  +payment_status: string
  +payment_method: string
  +shipping_method: string
  +items_total: decimal
  +shipping_fee: decimal
  +discount_total: decimal
  +total_price: decimal
  +orderDate: Date
  +orderItems: List<OrderItem>
  +payments: List<Payment>
  +vouchers: List<Voucher>
  --
  +getOrderById(): Order
  +getOrderStatus(): string
  +totalPrice(): decimal
  +createOrder(): Order
  +updateOrderStatus(status: string): void
  +cancelOrder(): void
}

class OrderItem {
  -id: int
  -order_id: int
  -book_id: int
  +quantity: int
  +price: decimal
  +total_price: decimal
  --
  +getTotalPrice(): decimal
}

class Payment {
  -id: int
  -order_id: int
  +amount: decimal
  +method: string
  +status: string
  +transaction_ref: string
  +paymentDate: Date
  --
  +getPaymentById(): Payment
  +getPaymentDate(): Date
  +addStatus(): string
  +addPayment(orderId: int, amount: decimal): void
  +createVnpayPaymentUrl(): string
  +processPayment(): void
}

class Voucher {
  -id: int
  +code: string
  +name: string
  +description: string
  +type: string
  +value: decimal
  +min_order_amount: decimal
  +max_discount: decimal
  +usage_limit: int
  +used_count: int
  +valid_from: Date
  +valid_to: Date
  +is_active: boolean
  --
  +getVoucherByCode(code: string): Voucher
  +validateVoucher(orderTotal: decimal, itemCount: int): boolean
  +applyVoucher(orderId: int): decimal
  +getDiscountAmount(orderTotal: decimal): decimal
}

class Category {
  -id: int
  +name: string
  +slug: string
  -parent_id: int
  +books: List<Book>
  --
  +getCategoryById(): Category
  +getCategoryBySlug(slug: string): Category
  +getAllCategories(): List<Category>
  +getSubCategories(parentId: int): List<Category>
}

class Wishlist {
  -id: int
  -user_id: int
  -book_id: int
  +created_at: Date
  --
  +addToWishlist(bookId: int): void
  +removeFromWishlist(bookId: int): void
  +getWishlistByUser(userId: int): List<Wishlist>
}

class UserAddress {
  -id: int
  -user_id: int
  +full_name: string
  +phone: string
  +line1: string
  +city: string
  +state: string
  +country: string
  +zipcode: string
  +is_default: boolean
  --
  +getAddressById(): UserAddress
  +getAddressesByUser(userId: int): List<UserAddress>
  +setAsDefault(): void
}

class BookImage {
  -id: int
  -book_id: int
  +image_url: string
  +sort_order: int
  --
  +getImagesByBook(bookId: int): List<BookImage>
}

' ============================================
' RELATIONSHIPS
' ============================================

' User relationships
User "1" --> "*" Order : places
User "1" --> "*" Review : writes
User "1" --> "*" Wishlist : has
User "1" --> "*" UserAddress : has
User "1" --> "*" Cart : owns

' Book relationships
Book "1" --> "*" Review : receives
Book "1" --> "*" Wishlist : in
Book "1" --> "*" OrderItem : ordered_as
Book "1" --> "*" CartItem : in_cart
Book "1" --> "*" BookImage : has
Book "*" --> "1" Category : belongs_to

' Cart relationships
Cart "1" --> "*" CartItem : contains
Cart "*" --> "1" User : owned_by

' Order relationships
Order "1" --> "*" OrderItem : contains
Order "1" --> "*" Payment : has
Order "*" --> "1" User : placed_by
Order "*" --> "1" UserAddress : uses

' OrderItem relationships
OrderItem "*" --> "1" Order : part_of
OrderItem "*" --> "1" Book : references

' CartItem relationships
CartItem "*" --> "1" Cart : part_of
CartItem "*" --> "1" Book : references

' Payment relationships
Payment "*" --> "1" Order : pays_for

' Voucher relationships
Order "*" --> "*" Voucher : uses

' Category relationships
Category "1" --> "*" Category : parent_of

' Composition relationships (filled diamond)
Order *-- OrderItem : contains
Order *-- Payment : has
Cart *-- CartItem : contains
Book *-- BookImage : has

@enduml

